# ticktick-mcp

./: AGENTS.md  README.md  pyproject.toml  requirements.txt  setup.py  test_all.py  test_integration.py  test_search_tasks.py
ticktick_mcp/src/: models.py  server.py  ticktick_client.py
