[project]
name = "ticktick-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for TickTick task management"
authors = [
    {name = "Jaesung Park", email = "parkjs814@gmail.com"}
]
requires-python = ">=3.10"
urls = {Homepage = "https://github.com/v2nic/ticktick-mcp"}
dependencies = [
    "mcp[cli]>=1.2.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.30.0,<3.0.0",
    "pydantic>=1.10,<3.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
ticktick-mcp = "ticktick_mcp.cli:main"
ticktick-auth = "ticktick_mcp.authenticate:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
